Version 1.3.0
- Changed the Attribute Service to issue attributes with configurable names (as opposed to the same fixed attribute name).
- Changed the Attribute Service API to support both string-based simple attributes, and (group,role) complex attributes
- Removed all code related to parse attribute strings into (group,role) pairs
- Inserted example code to query Authorization Services deployed at ESG-JPL and ESG-PCMDI Gateways
- Merged with contributions from BADC
- Repackaged from "esg.saml" to "esg.security"

Note that the above changes alter the API of the SAMLAttributes interface, and consequently of the SAMLAttributesFactory interface:
any implementation of the factory interface must now generate attributes that have both a name and a value, either as simple strings
or as (group,role) pairs.

Version 1.2.0
- Added BSD Open Source License
- Changed log file name to avoid possible conflicts with other applications
- Moved configuration files to module specific directory: esg/saml/config.
- Upgraded dependencies to latest version of OpenSAML libraries (i.e. opensaml, openws and xmltooling jars)

Version 1.2.1
- Removed warnings due to obsolete Xerces and SAML libraries.

Version 1.2.2
- Implementation of optional white-listing for Attribute and Authorization Services

Version 1.1.2.2
- Changed versioning schema to include datanode schema at the beginning
- Moved utils subpackage to esg.security.utils